--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <meta charset="utf-8">
   <meta name="viewport"
-    content="target-densitydpi=device-dpi, width=device-width, initial-scale=0.5, maximum-scale=1.0, minimum-scale=0.5, user-scalable=no, minimal-ui" />
+    content="target-densitydpi=device-dpi, width=device-width, initial-scale=0.5, maximum-scale=1.0, minimum-scale=0.5, user-scalable=yes, minimal-ui" />
   <style>
     @-ms-viewport {
       width: device-width;
